Update spec and node test issues